[package]
name = "votecube-ui-read"
version = "0.1.0"
authors = ["Artem Shamsutdinov <artem.shamsutdinov@votecube.com>"]
edition = "2018"

[[bin]]
name = "votecube-ui-read"
path = "src/main.rs"

[dependencies]
actix-web = { version = "2" }
actix-rt = { version = "1" }
cdrs = { version = "2" }
#cdrs_helpers_derive = "0.3.0"
env_logger = "0.6"
lru = "0.4.3"
#maplit = { version = "1" }
radix_fmt = "1"

[dev-dependencies]
env_logger = "0.4.3"
#regex = "0.2.5"
