[package]
name = "votecube-ui-read"
version = "0.1.0"
authors = ["Artem Shamsutdinov <artem.shamsutdinov@votecube.com>"]
edition = "2018"

[[bin]]
name = "votecube-ui-read"
path = "src/main.rs"

[dependencies]
actix-web = { version = "2" }
actix-rt = { version = "1" }
cdrs = { version = "2" }
cdrs_helpers_derive = "0.3.0"
env_logger = "0.6"
job_scheduler = "1.1.0"
lru_rs_mem = { path = "../lru-rs-mem" }
maplit = { version = "1" }
#radix_fmt = "1"
serde = "1.0"
serde_derive = "1.0"
sysinfo = "0.10.3"
votecube_rust_lib = { path = "../votecube-rust-lib" }
#tokio = "0.2.6"

[dev-dependencies]
env_logger = "0.4.3"
#regex = "0.2.5"
